--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,69 +1,109 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Poppins
+}
+.navbar {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #5e17eb;
+  color: #fff;
+  padding: 1rem;
+  width: 100vw;
+  height: 5rem;
+  position: sticky
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.navbar-logo {
+  font-size: 1.5rem;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.navbar-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-menu a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 1rem;
+  padding: 0.5rem;
+  font-weight: 900;
+}
+
+.navbar-menu a:hover {
+  background-color: #fff;
+  color: #2a2a2a;
+  border-radius: 4px;
+}
+
+/* Estilos para pantallas pequeñas y medianas */
+@media screen and (max-width: 768px) {
+  .navbar-menu {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 3rem;
+      left: 0;
+      right: 0;
+      background-color: #2a2a2a;
+      padding: 1rem 0;
+}
+
+.navbar-menu.open {
+  display: flex;
+}
+
+.navbar-menu a {
+  margin: 0;
+  padding: 1rem;
+  text-align: center;
+}
+
+.navbar-menu-icon {
+  display: block;
+  font-size: 1.5rem;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  }
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/* book search component styles */
+.book-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+}
+
+.image {
+  max-width: 100%;
+  height: auto;
+}
+
+.search-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  max-width: 500px;
+  gap: 20px; 
+}
+
+.search-input {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.add-button {
+  width: 7rem;
+  background-color: #5e17eb;
+  color: #fff;
+  margin: 0;
+  font-weight: 900;
+  margin-bottom: 10px;
 }
